<resources>
    <string name="app_name">Simple Twitter App</string>
    <string name="follower_profile_img_str">Follower Profile Image</string>
    <string name="tmp_place_holder_name">Mohamed Habib</string>
    <string name="tmp_place_holder_handle">\@mohamedhabib12</string>
    <string name="tmp_place_holder_long_text">Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text</string>
    <string name="logout">Logout</string>
    <string name="follower_background_str">follower_background_str</string>
    <string name="temp_place_holder_follower_tweets">Mohamed Habib Tweets</string>
</resources>
